--- a/Task-Manager/index.html
+++ b/Task-Manager/index.html
@@ -28,7 +28,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
       <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>Task-Manager</title>
   </head>
   <body>
     <div id="root"></div>
